# navylie

./: .bazelrc  .gitignore  .goreleaser.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.org  WORKSPACE.bazel  WORKSPACE.bzlmod  file.go  go.mod  go.sum  model.go  navylie.go  templates.go  templates_fetch.go  txtar.go
.github/workflows/: ci.yml
cmd/: BUILD.bazel  main.go
templates/: 1.txtar
