load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "f4a9314518ca6acfa16cc4ab43b0b8ce1e4ea64b81c38d8a3772883f153346b8",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.50.1/rules_go-v0.50.1.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.50.1/rules_go-v0.50.1.zip",
    ],
)

http_archive(
    name = "bazel_gazelle",
    sha256 = "26be38709f5629d712a1846bdc4f05dd0130f40f02ccf758e90e6926e1305863",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.40.0/bazel-gazelle-v0.40.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.40.0/bazel-gazelle-v0.40.0.tar.gz",
    ],
)

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")
load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_repository(
    name = "com_github_taylormonacelli_goldbug",
    importpath = "github.com/taylormonacelli/goldbug",
    sum = "h1:2NQnMjAfznHkKh8dKPTUHJqnswgqWrcF/NhOnm4TQRI=",
    version = "v0.0.6",
)

go_repository(
    name = "com_github_taylormonacelli_coalfoot",
    importpath = "github.com/taylormonacelli/coalfoot",
    sum = "h1:ibEqOe4xLeB/IbrxhUjs69bx6YAqbycBk/qL7RuvpGc=",
    version = "v0.0.11",
)

go_repository(
    name = "com_github_taylormonacelli_ashpalm",
    importpath = "github.com/taylormonacelli/ashpalm",
    sum = "h1:kTBz46CsUFnJmwXzH0o0bXtEK0PQ3tD7pBS1A/CDpxw=",
    version = "v0.0.6",
)

go_repository(
    name = "com_github_taylormonacelli_forestfish",
    importpath = "github.com/taylormonacelli/forestfish",
    sum = "h1:EHEkImUR5X/u7OpOSx4M9t51btRABjz0zz0RNphN8A4=",
    version = "v0.0.9",
)

load("//:deps.bzl", "go_dependencies")

# gazelle:repository_macro deps.bzl%go_dependencies
go_dependencies()
go_rules_dependencies()
go_register_toolchains(version = "1.21.3")
gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")
